fixed vertical alignment of avatar image on oneline email addresses

--- a/frontend/src/styles.css
+++ b/frontend/src/styles.css
@@ -47,8 +47,11 @@ td ul {
 }
 
 table img {
-	margin-top: 0.5em;
 	float: left
+}
+
+img.multiline {
+	margin-top: 0.5em;
 }
 
 table a {
